# pynndescent

./: .gitignore  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.py  test_threaded.py
ci/: install.sh  success.sh  test.sh
doc/: api.rst  conf.py  how_pynndescent_works.ipynb  how_to_use_pynndescent.ipynb  index.rst  performance.ipynb  pynndescent_in_pipelines.ipynb  pynndescent_metrics.ipynb  requirements.txt  sparse_data_with_pynndescent.ipynb
nndescent-rs/: Cargo.toml  PLAN.md  TODO.md  benchmark_candidate_building.py  benchmark_comparison.py  benchmark_correctness.py  benchmark_heap.py  benchmark_micro.py  benchmark_phases.py  benchmark_query.py  compute_exact_knn.py  profile_phases.py  profile_rust.py
nndescent-rs/benchmarks/: benchmark_comparison.py
nndescent-rs/crates/nndescent-core/: Cargo.toml
nndescent-rs/crates/nndescent-core/benches/: distance.rs  heap.rs
nndescent-rs/crates/nndescent-core/src/: index.rs  lib.rs  rng.rs  visited.rs
nndescent-rs/crates/nndescent-core/src/distance/: alternatives.rs  angular.rs  binary.rs  cosine.rs  euclidean.rs  hellinger.rs  inner_product.rs  minkowski.rs  mod.rs  quantized.rs  traits.rs
nndescent-rs/crates/nndescent-core/src/graph/: mod.rs  neighbor_graph.rs  search_graph.rs
nndescent-rs/crates/nndescent-core/src/heap/: candidate_heap.rs  mod.rs  neighbor_heap.rs
nndescent-rs/crates/nndescent-core/src/nndescent/: candidates.rs  mod.rs  update.rs
nndescent-rs/crates/nndescent-core/src/search/: greedy.rs  mod.rs
nndescent-rs/crates/nndescent-core/src/tree/: builder.rs  flat_tree.rs  mod.rs
nndescent-rs/crates/nndescent-simd/: Cargo.toml
nndescent-rs/crates/nndescent-simd/benches/: simd_distance.rs
nndescent-rs/crates/nndescent-simd/src/: avx2.rs  avx512.rs  detect.rs  lib.rs
nndescent-rs/crates/pynndescent-rs/: Cargo.toml  pyproject.toml
nndescent-rs/crates/pynndescent-rs/src/: lib.rs
pynndescent/: .travis.yml  __init__.py  distances.py  distributed_nndescent.py  graph_utils.py  optimal_transport.py  pynndescent_.py  rp_trees.py  sparse.py  sparse_nndescent.py  sparse_threaded.py  threaded.py  threaded_rp_trees.py  utils.py
pynndescent/ci/: test.sh
pynndescent/tests/: conftest.py  test_distances.py  test_hub_trees.py  test_pynndescent_.py  test_rank.py  test_threaded.py
pynndescent/tests/test_data/: cosine_hang.npy  cosine_near_duplicates.npy  pynndescent_bug_np.npz
