[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pynndescent"
version = "0.6.0"
authors = [{name = "Leland McInnes", email = "leland.mcinnes@gmail.com"}]
maintainers = [{name = "Leland McInnes", email = "leland.mcinnes@gmail.com"}]
license = "BSD-2-Clause"
description = "Nearest Neighbor Descent"
keywords = ["nearest", "neighbor", "knn", "ANN"]
readme = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
urls = {Homepage = "http://github.com/lmcinnes/pynndescent"}
dependencies = [
    "scikit-learn >= 0.18",
    "scipy >= 1.0",
    "numba >= 0.55.0",
    "llvmlite >= 0.38",
    "joblib >= 0.11",
]

[project.optional-dependencies]
testing = ["pytest"]

[tool.setuptools]
packages = ["pynndescent"]
zip-safe = false
include-package-data = false
