[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pynndescent_rs"
version = "0.1.0"
description = "High-performance Rust implementation of NN-Descent"
requires-python = ">=3.8"
license = {text = "BSD-2-Clause"}
authors = [
    {name = "Leland McInnes", email = "leland.mcinnes@gmail.com"}
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pynndescent",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pynndescent_rs"
